# serializer version: 1
# name: TestCategoricalOutputs.test_rf_regressor_ctree_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.61248 |    0.04879 |   -0.20305 |     0.05959 |     -0.01983 |   -0.30896 |   -0.3183  |     0.20728 |         -0.27042 |      -0.05053 |       -0.03522 |
      |  2 |            2 | 2.20594 | -0.17775 |   -0.04833 |   -0.37423 |     0.00532 |      0.03792 |   -0.09993 |   -0.33886 |     0.15643 |         -0.34512 |       0.04954 |       -0.06671 |
      |  3 |            3 | 2.20594 |  0.05963 |    0.55566 |   -0.11366 |     0.03059 |      0.06252 |    0.9354  |    0.16418 |     0.07416 |          0.20878 |       0.02039 |        0.018   |
      |  4 |            4 | 2.20594 |  0.46231 |    0.06991 |    0.13374 |     0.00933 |     -0.15418 |   -0.15606 |    0.07526 |     0.06802 |          0.01623 |      -0.02258 |       -0.03693 |
      |  5 |            5 | 2.20594 |  0.25209 |    0.05935 |   -0.06038 |     0.11495 |      0.07309 |   -0.04687 |   -0.31811 |     0.15502 |         -0.04725 |      -0.07898 |       -0.04146 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 |  0.15574 |    0.05454 |    0.0797  |     0.14368 |      0.11963 |    0.11068 |    0.15782 |     0.17617 |          0.0679  |       0.12421 |        0.074   |
      |  2 |            2 |      0 |  0.09418 |    0.04668 |    0.05615 |     0.09273 |      0.08507 |    0.07676 |    0.12754 |     0.12323 |          0.0475  |       0.08617 |        0.05653 |
      |  3 |            3 |      0 |  0.18819 |    0.0634  |    0.07503 |     0.13337 |      0.13467 |    0.14768 |    0.18608 |     0.21563 |          0.08401 |       0.13232 |        0.06642 |
      |  4 |            4 |      0 |  0.14772 |    0.05941 |    0.08013 |     0.09048 |      0.14096 |    0.07979 |    0.14598 |     0.20654 |          0.05209 |       0.09172 |        0.05834 |
      |  5 |            5 |      0 |  0.11314 |    0.05866 |    0.07909 |     0.10141 |      0.11468 |    0.10407 |    0.22486 |     0.25212 |          0.05738 |       0.11545 |        0.07611 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_ctree_categorical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|--------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 | 2.20594 |   -0.79677 |   -0.13991 |   -0.15336 |     -0.41307 |
      |  2 |            2 | 2.20594 |   -0.5158  |   -0.13083 |   -0.18083 |     -0.37426 |
      |  3 |            3 | 2.20594 |    0.52809 |    1.04504 |    0.08053 |      0.36199 |
      |  4 |            4 | 2.20594 |    0.61434 |   -0.09523 |    0.0739  |     -0.12795 |
      |  5 |            5 | 2.20594 |    0.05036 |    0.15168 |    1e-05   |     -0.1406  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|-------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  2 |            2 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  3 |            3 |      0 |          0 |          0 |          0 |            0 |
      |  4 |            4 |      0 |          0 |         -0 |          0 |           -0 |
      |  5 |            5 |      0 |          0 |          0 |          0 |           -0 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_vaeac_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.33709 |    0.00972 |   -0.02197 |     0.03701 |     -0.08685 |   -0.14481 |   -0.23839 |    -0.05626 |         -0.33709 |      -0.18077 |       -0.14661 |
      |  2 |            2 | 2.20594 | -0.22505 |   -0.02575 |   -0.11748 |    -0.05132 |     -0.07127 |   -0.00509 |   -0.16263 |    -0.07539 |         -0.22505 |      -0.13061 |       -0.11209 |
      |  3 |            3 | 2.20594 |  0.28792 |    0.12031 |   -0.11759 |    -0.06249 |      0.34817 |    0.80409 |    0.39357 |     0.13195 |          0.28792 |      -0.10084 |       -0.07738 |
      |  4 |            4 | 2.20594 |  0.16038 |    0.03644 |    0.19973 |     0.04614 |      0.13128 |   -0.17698 |    0.07135 |    -0.04139 |          0.16038 |      -0.0253  |       -0.09698 |
      |  5 |            5 | 2.20594 |  0.02238 |   -0.15136 |    0.18862 |     0.03307 |      0.12753 |    0.06748 |    0.0065  |     0.02609 |          0.02238 |      -0.11854 |       -0.1627  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 |  0.05145 |    0.06606 |    0.05975 |     0.08297 |      0.05306 |    0.0697  |    0.06003 |     0.06187 |          0.05145 |       0.05732 |        0.03141 |
      |  2 |            2 |      0 |  0.03963 |    0.04684 |    0.04731 |     0.09762 |      0.05217 |    0.04932 |    0.05054 |     0.07524 |          0.03963 |       0.03285 |        0.02991 |
      |  3 |            3 |      0 |  0.08457 |    0.14338 |    0.14854 |     0.07555 |      0.07496 |    0.14024 |    0.09861 |     0.0708  |          0.08457 |       0.14079 |        0.10413 |
      |  4 |            4 |      0 |  0.03126 |    0.06652 |    0.05772 |     0.08282 |      0.0514  |    0.0536  |    0.04652 |     0.07675 |          0.03126 |       0.04268 |        0.07681 |
      |  5 |            5 |      0 |  0.02603 |    0.05761 |    0.06243 |     0.02477 |      0.04132 |    0.04759 |    0.04762 |     0.0387  |          0.02603 |       0.03928 |        0.08384 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_vaeac_categorical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|--------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 | 2.20594 |   -0.64791 |   -0.24186 |   -0.18347 |     -0.42987 |
      |  2 |            2 | 2.20594 |   -0.53431 |   -0.05047 |   -0.11354 |     -0.50341 |
      |  3 |            3 | 2.20594 |    0.7735  |    0.905   |    0.10495 |      0.23219 |
      |  4 |            4 | 2.20594 |    0.49353 |   -0.0982  |    0.03245 |      0.03728 |
      |  5 |            5 | 2.20594 |   -0.09241 |    0.19473 |   -0.04098 |      0.00011 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|-------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  2 |            2 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  3 |            3 |      0 |          0 |          0 |          0 |            0 |
      |  4 |            4 |      0 |          0 |         -0 |          0 |            0 |
      |  5 |            5 |      0 |         -0 |          0 |         -0 |            0 |
    ''',
  })
# ---
